# Portfolio-Assistant

./: .gitignore  Dockerfile  README.md  breh.txt  docker-compose.yml  pyproject.toml  requirements.txt
backend/: public.pem  security.py  server.py
config/: models.py
src/llm/: agents.py
src/llm/info/: skills.md  technologies.md
src/llm/info/cv/: about.md  contact.md  resume.md
src/llm/info/projects/: assistant.md  attack-copilot.md  synaptic.md
src/prompt_engineering/: __init__.py  assistant_instructions.md  filter_instructions.md
src/utils/: logger.py
tests/: interactive.py  llm_agents.py  llm_agents_tools.py  prompt_loader.py  run.py
