[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-assistant"
version = "0.1.0"
description = "Portfolio Assistant project."

[tool.setuptools]
# This tells setuptools to include the top-level folders as packages
packages = ["src", "config", "backend"]

[tool.vercel]
framework = "fastapi"
python = "3.13"
entrypoint = "backend/server.py"
